--- a/styles/main.css
+++ b/styles/main.css
@@ -57,6 +57,12 @@ body{
     padding-right: 20px;
 }
 
+.wholeExpression{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
 
 .separator{
     display: flex;
